# neat

./: .envrc  Cargo.toml  README.md
nix/modules/: devshell.nix  rust.nix
src/: config.rs  data.rs  environment.rs  genepool.rs  genome.rs  individual.rs  main.rs  population.rs
